<resources>
    <string name="app_name">COVID-19 VACCINE</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="statistic">Statistic</string>
    <string name="about">About</string>
    <string name="benefitOfVaccine">Vaccination is the administration of a vaccine to help the immune system develop protection from ....</string>
    <string name="detailsOFVaccine">Since the emergence of this novel coronavirus in December 2019, more than 20 vaccines have started to be rolled out. Here is an at-a-glance overview of those vaccines</string>
    <string name="the_benefit">The Benefit For injection</string>
    <string name="shouldTakeVaccine">Why should we Take Vaccine?</string>
    <string name="more_details">See More</string>
    <string name="anti_vaccines_covid_19">Anti Vaccines Covid-19</string>
    <string name="statement1">This App offers states for Corona Virus Vaccine around the world</string>
    <string name="input_country">input Country</string>
    <string name="vaizor">Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they come into contact with them. It uses your body’s natural defenses to build resistance to specific infections and makes your immune system stronger.
    Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease.Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they come into contact with them. It uses your body’s natural defenses to build resistance to specific infections and makes your immune system stronger.
    Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease.Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they come into contact with them. It uses your body’s natural defenses to build resistance to specific infections and makes your immune system stronger.
    Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease.Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they come into contact with them. It uses your body’s natural defenses to build resistance to specific infections and makes your immune system stronger.
    Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease.</string>
    <string name="App_Name">Covid 19 Vaccine App</string>
    <string name="covid">covid</string>
    <string name="vizor">There are four types of vaccines in clinical trials: whole virus, protein subunit, viral vector and nucleic acid (RNA and DNA), each of which protects people, but by producing immunity in a slightly different way.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covid3">Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they come into contact with them. It uses your body’s natural defenses to build resistance to specific infections and makes your immune system stronger. Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease. However, because vaccines contain only killed or weakened forms of germs like viruses or bacteria, they do not cause the disease or put you at risk of its complications. Most vaccines are given by an injection, but some are given orally (by mouth) or sprayed into the nose.</string>
    <string name="hello">Hello Folks ! I want to share my exploration about Covid Vaccine App. In this application you can find out the details of the vaccine and find the nearest vaccination location. Hope you guys like it and feel free to comment.</string>
    <string name="johnson_and_johnson_s">Johnson and Johnson’s</string>
    <string name="sinopharm">Sinopharm</string>
    <string name="astrazeneca">Astrazeneca</string>
    <string name="novavax">Novavax</string>
    <string name="description">Description :</string>
    <string name="pfizer_bionte">Pfizer-Bionte</string>
    <string name="moderna">Moderna</string>
    <string name="sputnik_v">Sputnik-v</string>
    <string name="project_done_by">Project Done By:</string>
    <string name="team_leader_ahmed_yusef">Team Leader: Ahmed Yusef</string>
    <string name="Team_Member_Nooralden.A">Team Member: Nooralden.A</string>
    <string name="people_fully_vaccinated">people fully vaccinated</string>
    <string name="people_vaccinated">people vaccinated</string>
    <string name="services">Services :</string>
    <string name="health_support">Health Support</string>
    <string name="iraq_statistics">Iraq Statistics : </string>
    <string name="this_statistics_shown">This Statistics Shown the Fully Vaccination and Daily</string>
    <string name="vaccination">Vaccination</string>
    <string name="covid_19">Covid-19</string>
    <string name="descriptionScreen">Vaccines and immunization :</string>
    <string name="Why_should_I_get_vaccinated">Without vaccines, we are at risk of serious illness and disability from diseases like measles, meningitis, pneumonia, tetanus and polio. Many of these diseases can be life-threatening. WHO estimates that childhood vaccines alone save over 4 million lives every year.Although some diseases may have become uncommon, the germs that cause them continue to circulate in some or all parts of the world. In today’s world, infectious diseases can easily cross borders, and infect anyone who is not protectedTwo key reasons to get vaccinated are to protect ourselves and to protect those around us. Because not everyone can be vaccinated – including very young babies, those who are seriously ill or have certain allergies – they depend on others being vaccinated to ensure they are also safe from vaccine-preventable diseases.</string>
    <string name="How_does_a_vaccine_work">Vaccines reduce risks of getting a disease by working with your body’s natural defenses to build protection. When you get a vaccine, your immune system responds. It:Recognizes the invading germ, such as the virus or bacteria.Produces antibodies. Antibodies are proteins produced naturally by the immune system to fight disease.Remembers the disease and how to fight it. If you are then exposed to the germ in the future, your immune system can quickly destroy it before you become unwell.The vaccine is therefore a safe and clever way to produce an immune response in the body, without causing illness.Our immune systems are designed to remember. Once exposed to one or more doses of a vaccine, we typically remain protected against a disease for years, decades or even a lifetime. This is what makes vaccines so effective. Rather than treating a disease after it occurs, vaccines prevent us in the first instance from getting sick.</string>
    <string name="Are_vaccines_safe">Vaccination is safe and side effects from a vaccine are usually minor and temporary, such as a sore arm or mild fever. More serious side effects are possible, but extremely rare.Any licensed vaccine is rigorously tested across multiple phases of trials before it is approved for use, and regularly reassessed once it is introduced. Scientists are also constantly monitoring information from several sources for any sign that a vaccine may cause health risks.Remember, you are far more likely to be seriously injured by a vaccine-preventable disease than by a vaccine. For example, tetanus can cause extreme pain, muscle spasms (lockjaw) and blood clots, measles can cause encephalitis (an infection of the brain) and blindness. Many vaccine-preventable diseases can even result in death. The benefits of vaccination greatly outweigh the risks, and many more illnesses and deaths would occur without vaccines.</string>
    <string name="what_is_vaccination">Vaccination is a simple, safe, and effective way of protecting people against harmful diseases, before they come into contact with them. It uses your body’s natural defenses to build resistance to specific infections and makes your immune system stronger. Vaccines train your immune system to create antibodies, just as it does when it’s exposed to a disease. However, because vaccines contain only killed or weakened forms of germs like viruses or bacteria, they do not cause the disease or put you at risk of its complications. Most vaccines are given by an injection, but some are given orally (by mouth) or sprayed into the nose.</string>
    <string name="how_does_a_vaccine_work">How does a vaccine work?</string>
    <string name="what_is_vaccin">What is vaccination?</string>
    <string name="why_should_i_get_vaccinated">Why should I get vaccinated?</string>
    <string name="are_vaccines_safe">Are vaccines safe?</string>
    <string name="daily_vaccine">Daily Vaccine</string>
    <string name="total_vaccine">Total Vaccine</string>
    <string name="manufactured">Manufactured</string>
    <string name="license_in_use">License In Use</string>
    <string name="emergency_use_auth">Emergency Use Auth</string>
    <string name="dosage_form">Dosage Form</string>
    <string name="injection">Injection</string>
    <string name="dosage">Dosage</string>
    <string name="_0_5_ml">0,5 mL</string>
    <string name="_0_3_ml">0,3 mL X2</string>
    <string name="vaccine">Vaccine</string>
    <string name="usa_germany">Pfizer-BioNTech \nUSA,Germany</string>
    <string name="efficacy">Efficacy</string>
    <string name="_0_5_ml_x2">0,5 ml X2</string>
    <string name="top_country_statistic">Top Country Statistic</string>
    <string name="test">ٍSymptoms:</string>
    <string name="fever">fever</string>
    <string name="dry_cough">dry cough</string>
    <string name="tiredness">tiredness</string>
    <string name="aches_and_pains">aches and pains</string>
    <string name="sore_throat">sore throat</string>
    <string name="diarrhoea">diarrhoea</string>
    <string name="conjunctivitis">conjunctivitis</string>
    <string name="headache">headache</string>
    <string name="loss_of_taste_smell">loss of taste,smell</string>
    <string name="a_rash_on_skin">a rash on skin</string>
    <string name="discolouration_of_fingers_toes">discolouration of fingers,toes</string>
    <string name="difficulty_breathing">difficulty breathing</string>
    <string name="shortness_of_breath">shortness of breath</string>
    <string name="chest_pain_pressure">chest pain,pressure</string>
    <string name="loss_of_speech_movement">loss of speech,movement</string>
    <string name="submitted">Submitted</string>
    <string name="infected">Infected</string>
    <string name="youInfected">You\'re Infected!!</string>
    <string name="possibly_infected">Possibly Infected</string>
    <string name="no_infected">No Infected</string>
    <string name="information_about_the_application">Information about the application</string>
    <string name="an_application_designed_and_developed_by_a_group_of_beginners_in_application_development_that_provides_a_set_of_services_such_as_information_on_vaccines_and_statistics_on_vaccinators_in_many_countries_and_many_other_services">An application designed and developed by a group of beginners in application development that provides a set of services such as information on vaccines and statistics on vaccinators in many countries and many other services.</string>
    <string name="to_contact_us_click_on_the_icon">To contact us click on the icon.</string>
    <string name="ahmed">Ahmed</string>
    <string name="nooralden">Nooralden</string>
    <string name="nofel">Nofel</string>
    <string name="huda">Huda</string>
    <string name="anwar">Anwar</string>
    <string name="people_may_be_sick">People may be sick with the virus for 1 to 14 days before developing any symptoms.</string>
</resources>