<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.fragment.HomeTestFragment">
    <TextView
        android:id="@+id/symptomsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="18dp"
        android:text="@string/test"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/descriptionState"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/people_may_be_sick"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/symptomsText"
        app:layout_constraintStart_toStartOf="@id/symptomsText" />
    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/creenho"
        app:layout_constraintTop_toBottomOf="@id/descriptionState"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/symptomsexperience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What symptoms do you\n experience?"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toTopOf="@id/chipGroup1"
        app:layout_constraintTop_toBottomOf="@id/image1"
        app:layout_constraintStart_toStartOf="@id/descriptionState"
        />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:chipSpacingHorizontal="1dp"
        app:chipSpacingVertical="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/symptomsexperience">
        <com.google.android.material.chip.Chip
            android:id="@+id/commonChip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/fever"
            android:textSize="18sp"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/commonChip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/dry_cough"
            android:textSize="18sp"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/commonChip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/tiredness"
            android:textSize="18sp"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/mediumChip5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/headache"
            android:textSize="18sp"/>
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true"
        android:layout_marginStart="4dp"
        app:chipSpacingHorizontal="1dp"
        app:chipSpacingVertical="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup1">
        <com.google.android.material.chip.Chip
            android:id="@+id/mediumChip1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/aches_and_pains"
            android:textSize="18sp"/>
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true"
        android:layout_marginStart="4dp"
        app:chipSpacingHorizontal="1dp"
        app:chipSpacingVertical="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup1">
        <com.google.android.material.chip.Chip
            android:id="@+id/mediumChip6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/a_rash_on_skin"
            android:textSize="18sp"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/hardChip4"
            android:layout_marginStart="22dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/loss_of_speech_movement"
            android:textSize="18sp"/>
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleLine="true"
        android:layout_marginStart="4dp"
        app:chipSpacingHorizontal="1dp"
        app:chipSpacingVertical="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroup4">
        <com.google.android.material.chip.Chip
            android:id="@+id/hardChip2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/shortness_of_breath"
            android:textSize="18sp"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/hardChip3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:text="@string/chest_pain_pressure"
            android:textSize="18sp"/>
    </com.google.android.material.chip.ChipGroup>
    <TextView
        android:id="@+id/infectedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:visibility="gone"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:background="@drawable/infected_background"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submittedButton"/>
    <Button
        android:id="@+id/submittedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/infected_background"
        android:text="@string/submitted"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
